--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 # build binaries next to the (shared) library and test certificate and key
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
-if(WITH_TLS)
+if(SOCKPUPPET_WITH_TLS)
   # find OpenSSL binary, hint to where we previously built/found it
   find_program(OPENSSL_BINARY openssl
     REQUIRED
@@ -31,7 +31,7 @@ if(WITH_TLS)
     COMMENT "Generating a self-signed certificate and private key to test with"
   )
   add_custom_target(generate_certificate DEPENDS ${CMAKE_BINARY_DIR}/test_key.pem ${CMAKE_BINARY_DIR}/test_cert.pem)
-endif(WITH_TLS)
+endif(SOCKPUPPET_WITH_TLS)
 
 # link everything with the static/shared library (and pthread where needed)
 link_libraries(sockpuppet $<$<PLATFORM_ID:Linux>:pthread>)
@@ -46,7 +46,7 @@ add_executable(sockpuppet_tcp_async_test sockpuppet_tcp_async_test.cpp sockpuppe
 add_executable(sockpuppet_tcp_async_performance_test sockpuppet_tcp_async_performance_test.cpp sockpuppet_test_common.h)
 add_executable(sockpuppet_internals_test sockpuppet_internals_test.cpp)
 add_executable(sockpuppet_todo_test sockpuppet_todo_test.cpp)
-if(WITH_TLS)
+if(SOCKPUPPET_WITH_TLS)
   add_executable(sockpuppet_tls_test sockpuppet_tcp_test.cpp sockpuppet_test_common.h)
   target_compile_definitions(sockpuppet_tls_test PRIVATE TEST_TLS)
   add_dependencies(sockpuppet_tls_test generate_certificate)
@@ -62,7 +62,7 @@ if(WITH_TLS)
   add_executable(sockpuppet_tls_async_performance_test sockpuppet_tcp_async_performance_test.cpp sockpuppet_test_common.h)
   target_compile_definitions(sockpuppet_tls_async_performance_test PRIVATE TEST_TLS)
   add_dependencies(sockpuppet_tls_async_performance_test generate_certificate)
-endif(WITH_TLS)
+endif(SOCKPUPPET_WITH_TLS)
 
 enable_testing()
 add_test(NAME sockpuppet_address_test COMMAND sockpuppet_address_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
@@ -75,12 +75,12 @@ add_test(NAME sockpuppet_tcp_async_test COMMAND sockpuppet_tcp_async_test WORKIN
 add_test(NAME sockpuppet_tcp_async_performance_test COMMAND sockpuppet_tcp_async_performance_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 add_test(NAME sockpuppet_internals_test COMMAND sockpuppet_internals_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 add_test(NAME sockpuppet_todo_test COMMAND sockpuppet_todo_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-if(WITH_TLS)
+if(SOCKPUPPET_WITH_TLS)
   add_test(NAME sockpuppet_tls_test COMMAND sockpuppet_tls_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
   add_test(NAME sockpuppet_tls_buffered_test COMMAND sockpuppet_tls_buffered_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
   add_test(NAME sockpuppet_tls_async_test COMMAND sockpuppet_tls_async_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
   add_test(NAME sockpuppet_tls_async_performance_test COMMAND sockpuppet_tls_async_performance_test WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-endif(WITH_TLS)
+endif(SOCKPUPPET_WITH_TLS)
 
 add_custom_target(build_tests
   DEPENDS sockpuppet_address_test
@@ -94,14 +94,14 @@ add_custom_target(build_tests
           sockpuppet_internals_test
           sockpuppet_todo_test
 )
-if(WITH_TLS)
+if(SOCKPUPPET_WITH_TLS)
   add_dependencies(build_tests
     sockpuppet_tls_test
     sockpuppet_tls_buffered_test
     sockpuppet_tls_async_test
     sockpuppet_tls_async_performance_test
   )
-endif(WITH_TLS)
+endif(SOCKPUPPET_WITH_TLS)
 
 add_custom_target(run_tests
   COMMAND ${CMAKE_CTEST_COMMAND} -C $<CONFIGURATION> --verbose
@@ -118,10 +118,10 @@ install(TARGETS sockpuppet_tcp_async_test DESTINATION test)
 install(TARGETS sockpuppet_tcp_async_performance_test DESTINATION test)
 install(TARGETS sockpuppet_internals_test DESTINATION test)
 install(TARGETS sockpuppet_todo_test DESTINATION test)
-if(WITH_TLS)
+if(SOCKPUPPET_WITH_TLS)
   install(FILES ${CMAKE_BINARY_DIR}/test_key.pem ${CMAKE_BINARY_DIR}/test_cert.pem DESTINATION test)
   install(TARGETS sockpuppet_tls_test DESTINATION test)
   install(TARGETS sockpuppet_tls_buffered_test DESTINATION test)
   install(TARGETS sockpuppet_tls_async_test DESTINATION test)
   install(TARGETS sockpuppet_tls_async_performance_test DESTINATION test)
-endif(WITH_TLS)
+endif(SOCKPUPPET_WITH_TLS)
