--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -15,6 +15,7 @@ jobs:
           - name: "Windows MSVC17 shared library using LibreSSL"
             os: windows-2022
             generator: -G "Visual Studio 17 2022" -A x64
+            shared: ON
             libressl: -DOPENSSL_ROOT_DIR:PATH=build/external/libressl/install
             # don't use Debug to work around issue of FindOpenSSL.cmake which leaves us with
             # -- Found OpenSSL: optimized;D:/a/sockpuppet/sockpuppet/build/external/libressl/install/lib/crypto.lib;debug;C:/Program Files/OpenSSL/lib/VC/libcrypto64MDd.lib (found version "2.0.0")
@@ -24,30 +25,35 @@ jobs:
           - name: "Windows MSVC17 shared library using OpenSSL"
             os: windows-2022
             generator: -G "Visual Studio 17 2022" -A x64
+            shared: ON
             # uses pre-installed OpenSSL 1.1.1u
             type: Debug
 
-          - name: "Unix GCC shared library using LibreSSL"
+          - name: "Unix GCC static library using LibreSSL"
             os: ubuntu-latest
             generator: -G "Unix Makefiles"
+            shared: OFF
             libressl: -DOPENSSL_ROOT_DIR:PATH=build/external/libressl/install
             type: Debug
 
           - name: "Unix GCC shared library using OpenSSL"
             os: ubuntu-latest
             generator: -G "Unix Makefiles"
+            shared: ON
             # uses pre-installed OpenSSL 3.0.2
             type: Debug
 
           - name: "OSX clang shared library using LibreSSL"
             os: macos-latest
             generator: -G "Unix Makefiles"
+            shared: ON
             libressl: -DOPENSSL_ROOT_DIR:PATH=build/external/libressl/install
             type: Debug
 
-          - name: "OSX clang shared library using OpenSSL"
+          - name: "OSX clang static library using OpenSSL"
             os: macos-latest
             generator: -G "Unix Makefiles"
+            shared: OFF
             # uses pre-installed OpenSSL 3.1.1
             type: Debug
     runs-on: ${{ matrix.os }}
@@ -88,7 +94,7 @@ jobs:
           -B build
           -S .
           ${{ matrix.generator }}
-          -DSOCKPUPPET_BUILD_SHARED_LIBS:BOOL=ON
+          -DSOCKPUPPET_BUILD_SHARED_LIBS:BOOL=${{ matrix.shared }}
           -DSOCKPUPPET_WITH_TLS:BOOL=ON
           ${{ matrix.libressl }}
           -DCMAKE_BUILD_TYPE:STRING=${{ matrix.type }}
