--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -115,6 +115,7 @@ jobs:
           cmake
           -B build/install/demo/build
           -S build/install/demo
+          ${{ matrix.libressl }}
           -DCMAKE_BUILD_TYPE:STRING=${{ matrix.type }}
 
       - name: build demo
