CMake: build examples next to the shared library

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,6 @@
+# build binaries next to the (shared) library
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+
 # link everything with the static/shared library
 link_libraries(sockpuppet)
 
