Address: address index lookup (Windows-only)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,7 +100,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   target_compile_definitions(sockpuppet PRIVATE NOMINMAX NOCRYPT)
 
   # link with WinSock
-  list(APPEND DEPENDENCIES ws2_32)
+  list(APPEND DEPENDENCIES ws2_32 Iphlpapi)
 endif()
 
 if(${BUILD_SHARED_LIBS})
